--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 
 {
   "ConnectionStrings": {
-    "JornalDb": "server=mysql.jornalconexaooeste.com.br;port=3306;database=jornalconexaoo;uid=jornalconexaoo;password=07062015vs;"
+    "JornalDb": ""
   },
   "Logging": {
     "LogLevel": {
